[package]
name = "test_rc4_md5"
version = "0.1.0"
authors = ["luozijun <luozijun.assistant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
md-5 = "0.9"
openssl = "0.10"
shadowsocks-crypto = "0.1"